--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "mailgen": "^2.0.27",
     "mongoose": "^7.4.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.3",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1"
   }
