--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.17.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.17",
+    "@mui/x-date-pickers": "^6.18.6",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
