--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mailgen": "^2.0.27",
+    "moment": "^2.30.1",
     "mongoose": "^7.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
